# plover

./: .ghci  .gitignore  .travis.yml  Dep.hs  LICENSE  Main2.hs  Main3.hs  OWNERS  README.md  Simplify.hs  Vec.hs  guide.html  index.html  index.rst  mm.cabal  plover.cabal  plover.vim  reference.rst  smash.cabal  stack.yaml  template.txt  todo2.md  tutorials.rst  warnings.html
.github/workflows/: ci.yaml
compile/: mm.cabal
compile/src/: MGen.hs  MGen2.hs  Test.hs  Tests.hs  Types.hs  Unification.hs  Vec.hs
doc/: Makefile  README.md  guide.html  guide.rst  index.html  index.rst  reference.html  reference.rst  template.txt  tutorials.html  tutorials.rst  warnings.rst
doc/stylesheets/: nonindex.css  style.css
examples/: cholesky.plv  cholesky_test.plv  condstore.plv  dep_struct_test.plv  e.plv  ex0.plv  ex1.plv  ex10.plv  ex11.plv  ex12.plv  ex2.plv  ex3.plv  ex4.plv  ex5.plv  ex6.plv  ex7.plv  ex8.plv  ex9.plv  ex_bool_arr.plv  ex_corr.plv  ex_dollar.plv  ex_mats.plv  ex_out1.plv  ex_woah.plv  fizzbuzz.plv  footest.plv  kalman.plv  mandelbrot.plv  median.plv  numtests.plv  pi.plv  prelude.plv  pvt.plv  pvttest.text  qr.plv  qr_test.plv  quotetest2.txt  quotetest3.txt  quotetest5.txt  quotetest7.txt  (+3 more)
examples/argdir_tests/: deref_in_failure.plv  field_in_failure.plv  vector_in_failure.plv
examples/module-tests/: A.plv  B.plv  C.plv  D.plv  cycle.plv  cycleA.plv  cycleB.plv  cycleC.plv
old/: Main.hs
plover/: Main.hs
python-demo/: Makefile  README.md  filter.plv  main.plv  operations.plv  plover testing.ipynb  plover.pxd  plover.pyx  plover_main.plv  prelude.pxd  rand.plv  setup.py  util.plv
relics/: Expressions.hs  Generics.hs  Print.hs  Reduce.hs
simplify/: simplify.cabal
simplify/src/: Simplify.hs  Simplify2.hs  Tree.hs
src/: Main.hs  Names.hs  Plover.hs  plover.el  pvttest.text  qr.text  quotetest2.txt  quotetest3.txt  quotetest4.txt  quotetest5.txt  quotetest6.txt  quotetests.txt
src/Data/: Tag.hs
src/Language/: Plover.hs
src/Language/Plover/: Algebra.hs  CLI.hs  CodeGen.hs  Compile.hs  Convert.hs  CoreTypes.hs  ErrorUtil.hs  Expressions.hs  Generics.hs  Macros.hs  Main.hs  ModuleUtils.hs  Optimization.hs  Parser.hs  ParserTypes.hs  Print.hs  Quote.hs  QuoteTest.hs  QuoteTypes.hs  Quote_backup.hs  Reduce.hs  SemCheck.hs  Simplify.hs  Types.hs  Unify.hs  UsedNames.hs  todo
src/Plover/: Compile.hs  Expressions.hs  Generics.hs  Macros.hs  Main.hs  Print.hs  Reduce.hs  Types.hs  todo
src/Smash/: Compile.hs  Parse.hs  Parser.hs  Simplify.hs  Smash.hs
src/Smash/Compile/: Names.hs
src/Smash/Parse/: PVT.hs  Tests.hs  Types.hs  Types3.hs
src/Smash/Parser/: Tests.hs  Types.hs
stylesheets/: style.css
test/: Main.hs  Simplify.hs
testing/: pvt_test.c
