name:                plover

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis: An embedded DSL for compiling linear algebra into C for embedded systems

description: Plover is an embedded Haskell DSL for compiling linear algebra
             into robust efficient C code suitable for running on embedded
             systems.
             .
             Plover generates code free of dynamic memory allocation and
             provides compile time checking of matrix and vector shapes using a
             lightweight dependant type system.
             .
             Plover also aims to automatically make use of sparse structure
             present in many real world linear algebra problems to generate
             more efficient code.

license:             MIT
license-file:        LICENSE

homepage:            https://github.com/swift-nav/plover
author:              Swift Navigation Inc.
copyright:           Copyright (C) 2014-2015 Swift Navigation Inc.
maintainer:          Scott Kovach <dev@swiftnav.com>

category:            Language, Math, Linear Algebra

build-type:          Simple

extra-source-files:  README.md

cabal-version:       >=1.10

library
  exposed-modules:   Language.Plover,
                     Language.Plover.Main,
                     Language.Plover.Macros,
                     Language.Plover.Types,
                     Language.Plover.Reduce,
                     Language.Plover.Compile

  other-modules:     Language.Plover.Print,
                     Language.Plover.Generics,
                     Language.Plover.Expressions,
                     Language.Plover.Simplify

  build-depends:     base >=4.7 && <4.8,
                     mtl >=2.1 && <2.2,
                     containers,
                     free,
                     either,
                     transformers,
                     mtl,
                     smallcheck,
                     tasty,
                     process

  hs-source-dirs:    src/
  ghc-options:       -Wall -fprof-auto
  default-language:  Haskell2010

test-suite test-rewrites
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test, src
  build-depends:     base >=4.7 && <4.8,
                     mtl >=2.1 && <2.2,
                     containers,
                     free,
                     either,
                     transformers,
                     mtl,
                     process,
                     smallcheck,
                     QuickCheck,
                     HUnit,
                     tasty,
                     tasty-hunit,
                     tasty-quickcheck,
                     tasty-smallcheck

source-repository head
  type:              git
  location:          git@github.com:swift-nav/plover.git

