name:                plover

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis: An embedded DSL for compiling linear algebra into C for embedded systems

description: Plover is an embedded Haskell DSL for compiling linear algebra
             into robust efficient C code suitable for running on embedded
             systems.
             .
             Plover generates code free of dynamic memory allocation and
             provides compile time checking of matrix and vector shapes using a
             lightweight dependant type system.
             .
             Plover also aims to automatically make use of sparse structure
             present in many real world linear algebra problems to generate
             more efficient code.

license:             MIT
license-file:        LICENSE

homepage:            https://github.com/swift-nav/plover
author:              Swift Navigation Inc.
copyright:           Copyright (C) 2014-2015 Swift Navigation Inc.
maintainer:          Scott Kovach <dev@swiftnav.com>

category:            Language, Math, Linear Algebra

build-type:          Simple

extra-source-files:  README.md

cabal-version:       >=1.10

library
  exposed-modules:   Language.Plover,
                     Language.Plover.Main,
                     Language.Plover.Macros,
                     Language.Plover.Types,
                     Language.Plover.Reduce,
                     Language.Plover.Compile,
                     Language.Plover.Expressions,
                     Language.Plover.Simplify,
                     Language.Plover.Quote,
                     Language.Plover.QuoteTest,
                     Language.Plover.QuoteTypes,
                     Language.Plover.SemCheck,
                     Data.Tag

  other-modules:     Language.Plover.Print,
                     Language.Plover.Generics

  build-depends:     base >=4.7 && <4.9
                   , containers
                   , either
                   , free
                   , mtl >=2.1 && <2.3
                   , parsec >=3.1 && <3.2
                   , pretty >= 1.1
                   , process
                   , template-haskell
                   , transformers
                   , unification-fd
                   , pretty-show

  hs-source-dirs:    src/
  ghc-options:
              -- -Wall -Werror
  default-language:  Haskell2010

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:
              -- -Wall -Werror

  -- NOTE: We pull plover directly into the tests, not as a library
  -- This reduces reload time in `cabal repl test` by a large factor
  hs-source-dirs:    test, src

  build-depends:     
                       HUnit
                     , QuickCheck
                     , base >=4.7 && <4.8
                     , containers
                     , either
                     , free
                     , mtl >=2.1 && <2.2
                     , pretty >= 1.1
                     , process
                     , smallcheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , transformers

source-repository head
  type:              git
  location:          git@github.com:swift-nav/plover.git

